kubernetes_cluster/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-django-app
  labels:
    app: my-ks8-django
spec:
  selector:
    matchLabels:
      project: django
  template:
    metadata:
      labels:
        project: django
    spec:
      containers:
        - name: django
          image: tram888/django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
    type: NodePort
    selector:
        project: django
    ports:
      - name: django-port
        protocol: TCP
        port: 80
        targetPort: 80
        nodePort: 30281
